MDEV-36804 rollback to savepoint should not visit TC_LOG::run_prepare_ordered ..

.. otherwise it asserts expecting a non-zero value of ha_info::m_ht in the
function's loop.
However since it's a rollback operation such state is possible as a top-level
resets the ha_info:s of transaction in a loop so some of them can get reset
before binlog_rollback() is called.

Such transaction that is "spawned" to binlog-and-rollback (because may contain
unrollable side-effects) should not have visited TC_LOG::run_prepare_ordered()
in the first place. And it did so 'cos of incorrect cache_mngr->using_xa value.

This is fixed now.